merge release crypto-primitives 1.4.5.2-b0