@@ -1,5 +1,5 @@
 /*
- * Copyright 2025 Swiss Post Ltd
+ * Copyright 2024 Swiss Post Ltd
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -77,7 +77,7 @@ class VerifiableTest {
 
 			final VerificationResult verify = failVerifiable.and(otherFailVerifiable).verify();
 			assertFalse(verify.isVerified());
-			assertArrayEquals(expectedMessages.toArray(), verify.getErrorMessages().asList().toArray());
+			assertArrayEquals(expectedMessages.toArray(), verify.getErrorMessages().toArray());
 		}
 
 		@Test
@@ -88,7 +88,7 @@ class VerifiableTest {
 
 			final VerificationResult verify = successVerifiable.and(otherFailVerifiable).verify();
 			assertFalse(verify.isVerified());
-			assertArrayEquals(expectedMessages.toArray(), verify.getErrorMessages().asList().toArray());
+			assertArrayEquals(expectedMessages.toArray(), verify.getErrorMessages().toArray());
 		}
 
 		@Test
@@ -99,7 +99,7 @@ class VerifiableTest {
 
 			final VerificationResult verify = failVerifiable.and(otherSuccessVerifiable).verify();
 			assertFalse(verify.isVerified());
-			assertArrayEquals(expectedMessages.toArray(), verify.getErrorMessages().asList().toArray());
+			assertArrayEquals(expectedMessages.toArray(), verify.getErrorMessages().toArray());
 		}
 
 		@Test
@@ -128,7 +128,7 @@ class VerifiableTest {
 
 			assertFalse(verifiable.verify().isVerified());
 			assertEquals(1, verifiable.verify().getErrorMessages().size());
-			assertEquals("Error message 1.", verifiable.verify().getErrorMessages().get(0));
+			assertEquals("Error message 1.", verifiable.verify().getErrorMessages().getFirst());
 		}
 
 		@Test
@@ -163,7 +163,7 @@ class VerifiableTest {
 			expected.push(testMessage);
 
 			assertFalse(failureWithExtraMessage.verify().isVerified());
-			assertArrayEquals(expected.toArray(), failureWithExtraMessage.verify().getErrorMessages().asList().toArray());
+			assertArrayEquals(expected.toArray(), failureWithExtraMessage.verify().getErrorMessages().toArray());
 		}
 
 		@Test
